--- a/mpMap2.bib
+++ b/mpMap2.bib
@@ -165,3 +165,12 @@ pages="2585--2597"
    pages = {1--34},
    url = {https://www.jstatsoft.org/index.php/jss/article/view/v025i03}
 }
+
+@Manual{nnls,
+    title = {nnls: The Lawson-Hanson algorithm for non-negative least squares (NNLS)},
+    author = {Katharine M. Mullen and Ivo H. M. {van Stokkum}},
+    year = {2012},
+    note = {R package version 1.4},
+    url = {https://CRAN.R-project.org/package=nnls},
+}
+
